# MemRW3

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  dwarf.rs  main.rs  sync.rs  types.rs
src/model/: double_buffer.rs  mod.rs  state.rs  variable_pool.rs
src/probe/: mod.rs  session.rs
src/ui/: control_bar.rs  mod.rs  vari_properties.rs  vari_tree.rs
src/ui/chart_plugin/: fft.rs  legend.rs  line_dialog.rs  mod.rs  panel.rs
src/ui/table_plugin/: mod.rs  panel.rs  table_dialog.rs
